# multaptelescope

./: .gitmodules  CMakeLists.txt  README.md  aberrated_otf.cpp  acquire_images.cpp  align_measured_profiles.cpp  analyze_usaf_1951.cpp  aperture_optimization.cpp  center_mask.cpp  circular_array_optimization.cpp  coma_simulation.cpp  create_spectral_weighting.cpp  display_aperture.cpp  genetic_optimization.cpp  golay_optimization.cpp  image_binary_target.cpp  mats.h  mats_main.cpp  mtf_plot.cpp  mtf_statistics.cpp  n_arm_array_optimization.cpp  real_time_sbig_preview.cpp  real_time_slant_edge.cpp  restore_image.cpp  slant_edge.cpp  visualize_aperture.cpp
aperture_optimization/: CMakeLists.txt  acutance_fitness_function.h  acutance_fitness_function.hpp  annulus_fitness_function.h  annulus_fitness_function.hpp  circular_array.cpp  circular_array.h  global_circular_array.cpp  global_circular_array.h  global_n_arm.cpp  global_n_arm.h  global_sparse_aperture.cpp  global_sparse_aperture.h  golay_fitness_function.cpp  golay_fitness_function.h  golay_fitness_function.hpp  golay_genetic_impl.cpp  golay_genetic_impl.h  local_circular_array.cpp  local_circular_array.h  local_n_arm.cpp  local_n_arm.h  local_sparse_aperture.cpp  local_sparse_aperture.h  n_arm_array.cpp  n_arm_array.h  optimization_main.h  polar_mtf_weighting_fitness_function.h  polar_mtf_weighting_fitness_function.hpp
base/: .telescope.h.swp  CMakeLists.txt  aberration_factory.cpp  aberration_factory.h  aperture_parameters.proto  assertions.h  circshift.cpp  detector.cpp  detector.h  detector_parameters.proto  endian.h  fftw_lock.cpp  fftw_lock.h  filesystem.cpp  filesystem.h  kd_tree.h  kd_tree.hpp  linear_interpolator.cpp  linear_interpolator.h  macros.h  math_utils.h  mats_init.cpp  mats_init.h  menu_application.cpp  menu_application.h  model_parameters.proto  opencv_utils.cpp  opencv_utils.h  photon_noise.cpp  photon_noise.h  pupil_function.cpp  pupil_function.h  registry.h  scoped_ptr.h  simulation_config.proto  statistics.cpp  statistics.h  str_utils.cpp  str_utils.h  subprocess.cpp  (+11 more)
cmake/: FindGflags.cmake  FindHDF5.cmake  FindOpenCV.cmake  hdf5-config.cmake
deconvolution/: CMakeLists.txt  constrained_least_squares.cpp  constrained_least_squares.h
genetic/: CMakeLists.txt  genetic_algorithm.h  genetic_algorithm.hpp
io/: CMakeLists.txt  command_history.cpp  command_history.h  detector_reader.cpp  detector_reader.h  detector_writer.cpp  detector_writer.h  envi_image_header.proto  envi_image_reader.cpp  envi_image_reader.h  envi_image_writer.cpp  envi_image_writer.h  hdf5_reader.cpp  hdf5_reader.h  input_reader.cpp  input_reader.h  logging.cpp  logging.h  protobuf_reader.h  sbig_detector.cpp  sbig_detector.h  shell.h  shell.hpp  stl_writer.cpp  stl_writer.h  text_file_reader.cpp  text_file_reader.h
optical_designs/: CMakeLists.txt  aperture.cpp  aperture.h  aperture_parameters.proto  axicon.cpp  axicon.h  axicon_parameters.proto  cassegrain.cpp  cassegrain.h  cassegrain_ring.cpp  cassegrain_ring.h  cassegrain_ring_parameters.proto  circular.cpp  circular.h  compound_aperture.cpp  compound_aperture.h  compound_aperture_parameters.proto  golay6.cpp  golay6.h  golay6_parameters.proto  hdf5_wfe.cpp  hdf5_wfe.h  hdf5_wfe_parameters.proto  optical_vortex.cpp  optical_vortex.h  optical_vortex_parameters.proto  triarm3.cpp  triarm3.h  triarm3_parameters.proto  triarm9.cpp  triarm9.h  triarm9_parameters.proto  two_cassegrain.cpp  two_cassegrain.h  two_cassegrain_parameters.proto
otf_measurement/: CMakeLists.txt  hamming_window.cpp  hamming_window.h  jagged_edge_mtf.cpp  jagged_edge_mtf.h  mtf_interpolator.cpp  mtf_interpolator.h  slant_edge_mtf.cpp  slant_edge_mtf.h  usaf_1951_target.cpp  usaf_1951_target.h  usaf_1951_template.proto
ransac/: CMakeLists.txt  ransac.cpp  ransac.h  ransac_fit_circle.cpp  ransac_fit_circle.h  ransac_fit_line.cpp  ransac_fit_line.h
